k8s/00.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: platform
  name: __NAMESPACE__
