k8s/02.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-k8s
  namespace: hello-world-k8s
spec:
  ports:
    - port: 80
  selector:
    app: hello-world-k8s
